test/visibility/rename/badOldName.good
badOldName.chpl:8: error: Bad identifier in rename, no known 'br' in 'Foo'
